initial commit- week_1 getting and cleaning data in r

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "testing"
+title: "Getting and Cleaning"
 author: "Mitul"
 date: "19/02/2020"
 output: html_document
@@ -8,23 +8,20 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+### Week 1
+getwd(); setwd() - working directory \
+file.exists() - check if the directory exists \
+dir.create() - create a directory \
+download.file(url, destfile, method="curl") - download data from the web \
+list.files() - to list all the files in the directory
+```{r warning=FALSE}
+if (!file.exists("data")){
+  dir.create("data")
+}
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+url <- "https://data.baltimorecity.gov/api/views/dz54-2aru/rows.csv?accessType=DOWNLOAD"
+download.file(url, destfile="data/cameras.csv", method="curl")
+dateDownloded <- date()
+dateDownloded
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
